<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_CoeReadData" Id="{066f96df-25c3-46d0-b638-38efc0b2e509}">
    <Declaration><![CDATA[TYPE ST_CoeReadData :
STRUCT
	wIdx: WORD;
	bySubIdx: BYTE;
	bReadOK: BOOL;
	nData: UDINT;
	nSize: UDINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>