<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_CoeWriteData" Id="{b84f07b7-6380-4c50-af81-d8a10bf8f9dd}">
    <Declaration><![CDATA[TYPE ST_CoeWriteData :
STRUCT
	wIdx: WORD;
	bySubIdx: BYTE;
	bWriteOK: BOOL;
	nData: DWORD;
	nSize: UDINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>